--- a/Components/navbar.html
+++ b/Components/navbar.html
@@ -4,8 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet" href="/Components/navbar.css">
 </head>
 <body>
-    
+    <nav id="header">
+        <ul class="sidebar">
+            <li onclick=hideSidebar()><a href="#"><svg class="menu-icon" xmlns="http://www.w3.org/2000/svg" height="30" viewBox="0 -960 960 960" width="30"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../about.html">About</a></li>
+            <li><a href="../services.html">Services</a></li>
+            <li><a href="../projects.html">Projects</a></li>
+            <li><a href="../contact.html">Contact</a></li>
+        </ul>
+        <ul>
+            <li><a class="logo" href="../index.html"><img class="logo-image" src="/resources/images/Logo.png" alt="Our Logo"></a></li>
+            <li class="hideOnMobile"><a class="menu-item" id="home" href="../index.html">Home</a></li>
+            <li class="hideOnMobile"><a class="menu-item" id="about" href="../about.html">About</a></li>
+            <li class="hideOnMobile"><a class="menu-item" id="services" href="../services.html">Services</a></li>
+            <li class="hideOnMobile"><a class="menu-item" id="projects" href="../projects.html">Projects</a></li>
+            <li class="hideOnMobile"><a class="menu-item" id="contact" href="../contact.html">Contact</a></li>
+            <li class="menu-button" onclick= showSidebar()><a href="#"><svg class="menu-icon" xmlns="http://www.w3.org/2000/svg" height="30" viewBox="0 -960 960 960" width="30"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
+        </ul>
+    </nav>
+    <script>
+        function showSidebar(){
+            const sidebar = document.querySelector('.sidebar')
+            sidebar.style.display='flex'
+        }
+        function hideSidebar(){
+            const sidebar = document.querySelector('.sidebar')
+            sidebar.style.display='none'
+        }
+    </script>
 </body>
 </html>
