Added about and services sections, also some fixes.

--- a/Components/navbar.css
+++ b/Components/navbar.css
@@ -10,7 +10,7 @@ body{
 nav{
     width: 100%;
     padding: 0.5%;
-    background: rgb(5, 20, 68);
+    background: #eab64f;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
     position: fixed;
     top: 0;
